Streamline the guideline by checking-in project configuration files